# vitals

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: vitals.rb
scripts/: build-deb.sh  build-rpm.sh
src/: check.rs  config.rs  detect.rs  lib.rs  main.rs  output.rs  platform.rs  version.rs
src/checks/: custom.rs  deps.rs  env.rs  mod.rs  port.rs  runtime.rs  service.rs
