[package]
name = "vitals"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Universal development environment doctor — auto-detects and diagnoses project health"
license = "MIT"
repository = "https://github.com/onuroluc/vitals"
homepage = "https://github.com/onuroluc/vitals"
readme = "README.md"
keywords = ["cli", "developer-tools", "doctor", "diagnostics", "devtools"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/", "Formula/", "install.sh"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
colored = "2"
semver = "1"
anyhow = "1"
regex = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
